--- a/index.html
+++ b/index.html
@@ -10,23 +10,11 @@
   <link rel="stylesheet" href="css/main.css">
 
   <title>Frontend Mentor | Notifications page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
-  <main>
-    <header>
+  <main class="notifications-page">
+    <header class="notifications-page__header">
       <div class="left">
         <h1>Notifications</h1>
         <div class="counter">3</div>
@@ -35,7 +23,7 @@
         <button class="read-setter" name="Mark all as read">Mark all as read</button>
       </div>
     </header>
-    <div class="notifications-container">
+    <div class="notifications-page__content">
       <div class="notification unread">
         <div class="avatar"></div>
         <div class="content">
