--- a/index.html
+++ b/index.html
@@ -20,83 +20,115 @@
         <div class="counter">3</div>
       </div>
       <div class="right">
-        <button class="read-setter" name="Mark all as read">Mark all as read</button>
+        <button class="text-button read-setter" name="Mark all as read">Mark all as read</button>
       </div>
     </header>
     <div class="notifications-page__content">
       <div class="notification unread">
-        <div class="avatar"></div>
-        <div class="content">
-          <div class="msg">Mark Webber reacted to your recent post My first tournament today!</div>
-          <div class="time">1m ago</div>
-          <div class="private-msg"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-mark-webber.webp" alt="">
         </div>
-        <div class="attachments"></div>
+        <div class="content">
+          <div class="msg">
+            <p><a href="#" class="user-name">Mark Webber</a> reacted to your recent post My first tournament today!</p>
+            <div class="time">1m ago</div>
+          </div>
+        </div>
       </div>
       <div class="notification unread">
-        <div class="avatar"></div>
-        <div class="content">
-          <div class="msg">Angela Gray followed you</div>
-          <div class="time">5m ago</div>
-          <div class="private-msg"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-angela-gray.webp" alt="">
         </div>
-        <div class="attachments"></div>
+        <div class="content">
+          <div class="msg-header">
+            <div class="msg">
+              <p><a href="#" class="user-name">Angela Gray</a> followed you</p>
+              <div class="time">5m ago</div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="notification unread">
-        <div class="avatar"></div>
-        <div class="content">
-          <div class="msg">Jacob Thompson has joined your group Chess Club</div>
-          <div class="time">1 day ago</div>
-          <div class="private-msg"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-jacob-thompson.webp" alt="">
         </div>
-        <div class="attachments"></div>
+        <div class="content">
+          <div class="msg-header">
+            <div class="msg">
+              <p><a href="#" class="user-name">Jacob Thompson</a> has joined your group <a href="#"
+                  class="group-name">Chess Club</a>
+              </p>
+              <div class="time">1 day ago</div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="notification">
-        <div class="avatar"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="">
+        </div>
         <div class="content">
-          <div class="msg">Rizky Hasanuddin sent you a private message</div>
-          <div class="time">5 days ago</div>
+          <div class="msg-header">
+            <div class="msg">
+              <p><a href="#" class="user-name">Rizky Hasanuddin</a> sent you a private message</p>
+              <div class="time">5 days ago</div>
+            </div>
+          </div>
           <div class="private-msg">
             <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and
               I'm already having lots of fun and improving my game.</p>
           </div>
         </div>
-        <div class="attachments"></div>
       </div>
       <div class="notification">
-        <div class="avatar"></div>
-        <div class="content">
-          <div class="msg">Kimberly Smith commented on your picture</div>
-          <div class="time">1 week ago</div>
-          <div class="private-msg"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-kimberly-smith.webp" alt="">
         </div>
-        <div class="attachments"></div>
+        <div class="content">
+          <div class="msg-header">
+            <div class="msg">
+              <p>
+                <a href="#" class="user-name">Kimberly Smith</a> commented on your picture
+              </p>
+              <div class="time">1 week ago</div>
+            </div>
+            <div class="attachments">
+              <img src="./assets/images/image-chess.webp" alt="">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="notification">
-        <div class="avatar"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-nathan-peterson.webp" alt="">
+        </div>
         <div class="content">
-          <div class="msg">Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
+          <div class="msg">
+            <p><a href="#" class="user-name">Nathan Peterson</a> reacted to your recent post 5 end-game strategies to
+              increase
+              your win rate</p>
           </div>
           <div class="time">2 weeks ago</div>
-          <div class="private-msg"></div>
         </div>
-        <div class="attachments"></div>
       </div>
       <div class="notification">
-        <div class="avatar"></div>
-        <div class="content">
-          <div class="msg">Anna Kim left the group Chess Club</div>
-          <div class="time">2 weeks ago</div>
-          <div class="private-msg"></div>
+        <div class="avatar">
+          <img src="./assets/images/avatar-anna-kim.webp" alt="">
         </div>
-        <div class="attachments"></div>
+        <div class="content">
+          <div class="msg">
+            <p><a href="#" class="user-name">Anna Kim</a> left the group <a href="#" class="group-name">Chess Club</a>
+            </p>
+          </div>
+          <div class="time">2 weeks ago</div>
+        </div>
       </div>
     </div>
   </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/RobStk">robster</a>.
   </footer>
 </body>
 
